# skills-manager-desktop

./: .editorconfig  .gitattributes  .gitignore  BRAND_LICENSE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-windows.yml
assets/brand/: README.md
docs/: GITHUB_PUBLISHING.md
scripts/: generate_brand_assets.py
src/: App.tsx  aesthetic-v2.css  future-theme.css  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_security_scans.sql  0003_skill_descriptions.sql  0004_openai_compatible_provider.sql  0005_custom_skills.sql  0006_multi_agent_sessions.sql
src-tauri/src/: codex_catalog.rs  commands.rs  custom_skills.rs  db.rs  error.rs  external_sessions.rs  lib.rs  main.rs  managed.rs  models.rs  security.rs  sessions.rs  skill_descriptions.rs  skills.rs
src/components/: BrandMark.tsx  CommandPalette.css  CommandPalette.test.tsx  CommandPalette.tsx  Common.test.tsx  Common.tsx  DensitySwitcher.tsx  PaneResizeHandle.css  PaneResizeHandle.test.tsx  PaneResizeHandle.tsx  ThemeSwitcher.css  ThemeSwitcher.test.tsx  ThemeSwitcher.tsx  WindowTitlebar.css  WindowTitlebar.test.tsx  WindowTitlebar.tsx
src/features/: AiDescriptionUi.test.ts  AiDescriptionUi.tsx  CustomSkillsView.tsx  ImportSkillDialog.tsx  SessionsView.tsx  SkillSecurityPanel.tsx  SkillsView.tsx  (+1 more)
(+14 files in other folders)
